@@ -2,6 +2,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 == 02/06/2015 ==
 Uleat: Updated returns for Inventory and ItemInst const iterators. (const == const)
+Uleat: Replaced 'iter_inst' and 'iter_contents' typedefs with their stl definitions
 
 == 02/03/2015 ==
 Trevius: Crashfix for TempName() when numbers are passed at the end of the name.
